[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "yolov9py"
version = "1.0.0"
description = "YOLOv9: Learning What You Want to Learn Using Programmable Gradient Information."
readme = { file = "yolov9/README.md" , content-type = "text/markdown" }

license = { file = "yolov9/LICENSE.md" }
requires-python = ">=3.10"
keywords = [
    "deep-learning",
    "pytorch",
    "vision",
    "object-detection",
    "semantic-segmentation",
    "instance-segmentation",
    "panoptic-segmentation",
    "pose-estimation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)  ",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/WongKinYiu/yolov9"

[tool.setuptools.dynamic]
dependencies = {file = ["yolov9/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]